--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container">
   <h1>Evenementenmatch LHBTI+</h1>
 
   <form id="matchForm">
@@ -84,6 +85,7 @@
   </form>
 
   <div class="results" id="results"></div>
+</div>
 
   <script src="scriptlala.js"></script>
 </body>
